[package]
name = "wine-som"
version = "0.0.2"
license = "MIT"
description = "Example using rustic-som library on the winequality dataset"
keywords = ["SOM", "ML", "self-organizing-map"]
categories = ["machine-learning"]
exclude = [".DS_Store"]
edition = "2018"

[dependencies]
clap = "2.33.0"
csv = "1.1.3"
ndarray = "0.13.0"
ndarray-csv = "0.4.1"
rusticsom = { git = "https://github.com/masonblier/RusticSOM", version = "1.1.1" }
